# InkGen

./: .gitignore  CODE_OF_CONDUCT.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: Definition_of_Done.md  InkGen_11_13_2025.drawio  InkGen_2_17_2024.drawio  Proof_Workflow.md  api-reference.md  architecture-diagrams.md  contributing.md  dependency-map.md  examples.md  extraction-truth.md  getting-started.md  index.md  mask_alignment_findings.md  pdf-generation.md  text-and-layout.md
docs/adr/: 0001-pdf-grammar-truth-annotations.md  0002-closed-pdf-renderer-domain.md  (+25 more)
examples/: pdf_visual_spotcheck.py  run_inkgen.py  run_inkgen_primitives.py  test_svg_drawing.py
site/: 404.html  index.html
tests/: conftest.py  test_arc_finite_contract.py  test_bezier_finite_contract.py  test_boundary.py  test_boundary_canvas_contract.py  test_boundary_canvas_payload_contract.py  test_cad_component_groups.py  test_cad_zoning_contract.py  test_cad_zoning_factory_payload_contract.py  test_circle_contract.py  test_component.py  test_component_factory_payload_contract.py  test_component_group_contract.py  test_curve_contract.py  test_document.py  test_document_model_contract.py  test_document_outputs.py  test_drawing_components.py  test_drawing_group_contract.py  test_drawing_style_contract.py  test_dxf_contract.py  test_dxf_generator.py  test_error_contract.py  test_extraction_truth.py  test_flow_document_contract.py  test_font_contract.py  test_fonts.py  test_grammar_truth.py  test_layer_group_contract.py  test_line_contract.py  test_neutral_primitive_style_contract.py  test_paragraph.py  test_paragraph_contract.py  test_parser_stress_fixtures.py  test_path_contract.py  test_path_finite_contract.py  test_pdf_component_factory_payload_contract.py  test_pdf_document_contract.py  test_pdf_document_factory_payload_contract.py  test_pdf_generator.py  (+32 more)
(+410 files in other folders)
