[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inkgen"
version = "0.1.0"
description = "Synthetic drawing generation utilities for SVG documents."
authors = [
  { name = "InkGen Contributors" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "shapely",
  "Pillow",
  "svgpathtools",
  "matplotlib",
  "fonttools",
  "uharfbuzz",
  "pyyaml",
]
license = { file = "LICENSE" }
keywords = ["svg", "synthetic-data", "graphics", "cad", "procedural-generation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/<your-org>/InkGen"
Documentation = "https://github.com/<your-org>/InkGen#readme"
Issues = "https://github.com/<your-org>/InkGen/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 140

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "W",  # pycodestyle warnings
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = [
  "E203",  # whitespace before :
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S101"]
"tests/test_svg_generator.py" = ["F403", "F405"]
"tests/test_cad_component_groups.py" = ["F403", "F405"]
"tests/test_document.py" = ["F403", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
